@@ -1,6 +1,7 @@
 2012-11-10  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Move captcha media to private resources directory
+	* Move javascript to public resources directory
 	
 2012-11-09  Stanislas Rolland  <typo3@sjbr.ca>
 
